--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.0",
-    "nodemailer": "^7.0.10",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next": "14.0.1",
+    "nodemailer": "^6.9.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "eslint": "^9",
-    "eslint-config-next": "16.0.0",
-    "sass": "^1.93.2"
+    "eslint": "^8.53.0",
+    "eslint-config-next": "14.0.1",
+    "sass": "^1.69.5"
   }
 }
