--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.1",
     "nodemailer": "^6.9.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
